--- a/phase1/templates/frontend/index.html
+++ b/phase1/templates/frontend/index.html
@@ -64,7 +64,7 @@
                 </li>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 <li>
-                        <a href="#">Aditya Manoharan & Pratik Vagyani</a>
+                        <a href="#">Aditya | Pratik</a>
     
                     </li>
                 
@@ -76,6 +76,7 @@
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <h1>Phase 1</h1>
+                <p>Hostname of container : {{ hostname }}</p>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">Code :</span>
