--- a/phase1/templates/frontend/index.html
+++ b/phase1/templates/frontend/index.html
@@ -17,7 +17,7 @@
           height: 100%;
         }
         html, body {
-          height: 100%; /* To fit the map render to the page*/
+          height: 100%;
           margin: 0;
           padding: 0;
         }
@@ -52,14 +52,14 @@
                 </li>
                 <br>
                 <li>
-                    <a href="#" data-toggle="popover" data-placement="top" title="Help" data-content="Input can be names or zip code">Help</a>
+                    <a href="#" data-toggle="popover" data-placement="top" title="Help" data-content="Input code in Python">Help</a>
 
                 </li>
                 <li>
                     <a href="mailto:adityavazhipokkil@gmail.com">Contact</a>
                 </li>
                 <li>
-                    <a href="#" data-toggle="popover" data-placement="bottom" title="About" data-content="Developed by Aditya Manoharan">About</a>
+                    <a href="#" data-toggle="popover" data-placement="bottom" title="About" data-content="Developed by Aditya and Pratik">About</a>
 
                 </li>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -75,20 +75,18 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h1>Phase 1</h1>
-                <p>Hostname of container : {{ hostname }}</p>
+                <h1>Run a Python script (Phase 1)</h1>
+                <p>Hostname of docker container : {{ hostname }}</p>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Code : </label>
+                    <textarea class="form-control" id="codebox2" rows="5"></textarea>
+                </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon1">Code :</span>
+                            <button onclick="runCode(event)" class="btn btn-dark" type="button">Run Code</button>
                     </div>
-                    <input id="codebox" type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                    <!-- <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon1">Destination :</span>
-                    </div>
-                    <input id="destinationbox" type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2"> -->
-                    <div class="input-group-append">
-                      <button onclick="runCode(event)" class="btn btn-dark" type="button">Run Code</button>
-                    </div>
+                    <input id="outputbox" class="form-control" type="text" placeholder="Output..." readonly>
+                    
                 </div>
                 
             </div>
@@ -100,7 +98,7 @@
             function runCode(event) { 
                 event.preventDefault();
                 console.log("running onclick")
-                pycode = document.getElementById('codebox').value;
+                pycode = document.getElementById('codebox2').value;
                 console.log(pycode);
                 var requestJson = {'code': pycode}; // JSON for POST
                 $.ajax({
@@ -112,7 +110,8 @@
                     success: function(data) {
                         console.log('SUCCESS');
                         console.log(data);
-                        document.getElementById("output").innerHTML = data;
+                        // document.getElementById("outputbox").innerHTML = data;
+                        document.getElementById("outputbox").value=data;
                     },
                     error: function() {
                         console.log('FAILED');
