--- a/phase2/templates/frontend/publisher.html
+++ b/phase2/templates/frontend/publisher.html
@@ -46,32 +46,29 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
+                    <a href="/">
                         Dashboard
                     </a>
                 </li>
                 <br>
                 <li>
-                    <a href="#" data-placement="top" title="Help" data-content="Input code in Python">Publisher</a>
+                    <a href="publisher" data-placement="top" title="Help" data-content="Input code in Python">Publisher</a>
+
+                </li>
+                <li>
+                    <a href="subscriber" data-placement="top" title="Help" data-content="Input code in Python">Subscriber</a>
 
                 </li>
                 <br>
-                <li>
-                    <a href="#" data-placement="top" title="Help" data-content="Input code in Python">Subscriber</a>
-
-                </li>
                 <li>
                     <a href="#" data-toggle="popover" data-placement="top" title="Help" data-content="Input code in Python">Help</a>
 
                 </li>
                 <li>
-                    <a href="mailto:adityavazhipokkil@gmail.com">Contact</a>
-                </li>
-                <li>
                     <a href="#" data-toggle="popover" data-placement="bottom" title="About" data-content="Developed by Aditya and Pratik">About</a>
 
                 </li>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 <li>
                         <a href="#">Aditya | Pratik</a>
     
@@ -86,40 +83,21 @@
                 <div class="container-fluid">
                     <h1>Publisher Terminal</h1>
                     <p>Hostname of docker container : {{ hostname }}</p>
-                    <!-- <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Code : </label>
-                        <textarea class="form-control" id="codebox2" rows="5"></textarea>
-                    </div> -->
                     <form>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                            <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email of publisher">
                         </div>
                     </form>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="fowlplay">
-                        <label class="form-check-label" for="fowlplay">
-                          Fowl Play
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="stackers">
-                        <label class="form-check-label" for="stackers">
-                          Stackers
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="union">
-                        <label class="form-check-label" for="union">
-                          Union
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="edgyveggie">
-                        <label class="form-check-label" for="edgyveggie">
-                          Edgy Veggie
-                        </label>
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">Select event</label>
+                        <select class="form-control" id="eventselect">
+                            <option>Select one</option>
+                            <option id="fowlplay">Fowl Play</option>
+                            <option id="stackers">Stackers</option>
+                            <option id="union">Union</option>
+                            <option id="edgyveggie">Edgy Veggie</option>
+                        </select>
                     </div>
                     <br>
                     <div class="input-group mb-3">
@@ -129,9 +107,7 @@
                             <input type="text" id="event_message" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
                     </div>
                     <div class="input-group mb-3">
-                        <!-- <div class="input-group-prepend"> -->
-                    <button onclick = "doPublish(event)" type="button" class="btn btn-secondary">Subscribe</button>
-                        <!-- </div>     -->
+                        <button onclick = "doPublish(event)" type="button" class="btn btn-secondary">Publish</button>
                     </div>
                     
                 </div>
@@ -144,15 +120,14 @@
                 event.preventDefault();
                 console.log("running onclick")
                 var eventstring ='';
-                <!--subemail = document.getElementById('subscriberemail').value;-->
                 eventmessage = document.getElementById('event_message').value;
-                if(document.getElementById('fowlplay').checked)
+                if(document.getElementById('fowlplay').selected)
                     eventstring+='fowlplay';
-                if(document.getElementById('stackers').checked)
+                if(document.getElementById('stackers').selected)
                     eventstring+='stackers';
-                if(document.getElementById('union').checked)
+                if(document.getElementById('union').selected)
                     eventstring+='union';
-                if(document.getElementById('edgyveggie').checked)
+                if(document.getElementById('edgyveggie').selected)
                     eventstring+='edgyveggie';
 
                 var requestJson = {'events': eventstring, 'eventmessage': eventmessage};
