Modify for final submission

--- a/phase2/templates/frontend/publisher.html
+++ b/phase2/templates/frontend/publisher.html
@@ -111,7 +111,7 @@
                     </div>
                     
                 </div>
-                <p id="output"></p>
+                <p id="outputbox"></p>
             </div>
 
     </div>
@@ -141,6 +141,7 @@
                     success: function(data) {
                         console.log('SUCCESS');
                         console.log(data);
+                        document.getElementById("outputbox").innerHTML = "Published";
 
                     },
                     error: function() {
