--- a/phase2/templates/frontend/subscriber.html
+++ b/phase2/templates/frontend/subscriber.html
@@ -119,7 +119,7 @@
                 </div>
                 
             </div>
-            <p id="output"></p>
+            <p id="outputbox"></p>
         </div>
 
     </div>
