--- a/phase2/server/templates/frontend/index.html
+++ b/phase2/server/templates/frontend/index.html
@@ -81,7 +81,7 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h1>Publisher-Subscriber System</h1>
+                <h1>Publisher-Subscriber System (Centralized)</h1>
                 <p>Hostname of docker container : {{ hostname }}</p>
                 <br><br><br>
                 <p>This web application is a proof-of-concept of a job/shift posting system, implemented using pub-sub.</p>
